--- a/src/components/popular/Popular.scss
+++ b/src/components/popular/Popular.scss
@@ -427,3 +427,119 @@ section {
     }
   }
 }
+@media (max-width: 425px) {
+  section {
+    display: flex;
+    width: 100%;
+    padding-top: 30px;
+    position: relative;
+    .imgs {
+      position: relative;
+      z-index: -2;
+      top: 180px;
+      left: 0;
+      .cube {
+        position: absolute;
+        z-index: -22;
+      }
+      .elps {
+        position: absolute;
+        top: 170px;
+        z-index: -21;
+        width: 300px;
+      }
+    }
+    .popularHead {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .pupularBody {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      width: 100%;
+      justify-content: space-between;
+      gap: 10px;
+      border: 1px solid red;
+
+      padding: 70px 30px;
+      .product {
+        display: flex;
+        align-items: start;
+        width: 100%;
+        height: 300px;
+        border: 1px solid #dad4d4;
+        border-radius: 8px;
+        gap: 20px;
+        background-color: #fff;
+        transition: all 0.3s ease-in-out;
+        padding: 24px;
+        margin-top: 20px;
+        .imgWrapper {
+          width: 300px;
+          overflow: hidden;
+          height: 98%;
+          img {
+            width: 100%;
+            height: auto;
+            transition: transform 0.6s ease-in-out;
+            object-fit: fill;
+          }
+          img:hover {
+            transform: scale(1.1);
+          }
+        }
+        .productText {
+          display: flex;
+          align-items: start;
+          flex-direction: column;
+          gap: 10px;
+          width: 50%;
+          h4 {
+            font-family: Rubik;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 32px;
+            text-align: left;
+            text-decoration-skip-ink: none;
+          }
+          p {
+            font-family: Rubik;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 23.4px;
+            text-align: left;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+            color: #828282;
+          }
+          button {
+            background-color: #fff;
+            color: #661d9b;
+            font-family: Rubik;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 24px;
+            text-align: center;
+            text-decoration-skip-ink: none;
+            border: none;
+            border-radius: 4px;
+            padding: 12px 34px;
+            border: 1px solid #661d9b;
+            cursor: pointer;
+            transition: 0.3s ease-in-out;
+            &:hover {
+              color: #fff;
+              background-color: #661d9b;
+            }
+          }
+        }
+      }
+      .product:hover {
+        box-shadow: 0px 18px 45px -10px #00000021;
+      }
+    }
+  }
+}
