--- a/src/components/popular/Popular.scss
+++ b/src/components/popular/Popular.scss
@@ -462,14 +462,13 @@ section {
       width: 100%;
       justify-content: space-between;
       gap: 10px;
-      border: 1px solid red;
 
-      padding: 70px 30px;
+      padding: 30px 10px;
       .product {
         display: flex;
         align-items: start;
         width: 100%;
-        height: 300px;
+        height: 600px;
         border: 1px solid #dad4d4;
         border-radius: 8px;
         gap: 20px;
@@ -477,18 +476,20 @@ section {
         transition: all 0.3s ease-in-out;
         padding: 24px;
         margin-top: 20px;
+        flex-direction: column;
         .imgWrapper {
-          width: 300px;
+          width: 100%;
           overflow: hidden;
-          height: 98%;
+          height: 100%;
+          padding: 20px;
           img {
             width: 100%;
-            height: auto;
+            height: 90%;
             transition: transform 0.6s ease-in-out;
             object-fit: fill;
           }
           img:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
           }
         }
         .productText {
@@ -496,7 +497,7 @@ section {
           align-items: start;
           flex-direction: column;
           gap: 10px;
-          width: 50%;
+          width: 100%;
           h4 {
             font-family: Rubik;
             font-size: 20px;
@@ -526,7 +527,7 @@ section {
             text-decoration-skip-ink: none;
             border: none;
             border-radius: 4px;
-            padding: 12px 34px;
+            padding: 12px 24px;
             border: 1px solid #661d9b;
             cursor: pointer;
             transition: 0.3s ease-in-out;
