--- a/src/components/popular/Popular.scss
+++ b/src/components/popular/Popular.scss
@@ -110,9 +110,7 @@ section {
         justify-content: center;
         transform: translate(16px, -16px) scale(1);
         transition: all 0.4s ease-in-out;
-        &:hover {
-          transform: translate(16px, -16px) scale(1.1);
-        }
+        animation: pulsate 1.5s infinite, boxShadowWave 1.5s infinite; /* Animatsiya qo'shish */
       }
       .count_hidden {
         display: none;
@@ -121,6 +119,18 @@ section {
         display: flex;
         align-items: center;
         justify-content: center;
+        button {
+          background-color: #7421b0;
+          color: #fff;
+          border: none;
+
+          border-radius: 4px;
+          cursor: pointer;
+          transition: all 0.3s ease-in-out;
+          &:hover {
+            background-color: #60199d;
+          }
+        }
       }
       .imgWrapper {
         display: flex;
@@ -146,6 +156,8 @@ section {
         flex-direction: column;
         gap: 10px;
         width: 50%;
+        height: 100%;
+        position: relative;
         h4 {
           font-family: Rubik;
           font-size: 20px;
@@ -164,35 +176,54 @@ section {
           text-decoration-skip-ink: none;
           color: #828282;
         }
-        .btns {
+        .btnBody {
           display: flex;
           align-items: center;
           gap: 20px;
-
-          :nth-child(2) {
-            &:hover {
-              background-color: red;
-              color: #661d9b;
-            }
-          }
-          button {
+          justify-content: center;
+          width: 100%;
+          height: auto;
+          position: absolute;
+          bottom: 0;
+          .btn1 {
             background-color: #fff;
-            color: #661d9b;
+            color: #60199d;
             font-family: Rubik;
-            font-size: 32px;
+            font-size: 22px;
             font-weight: 700;
             line-height: 24px;
+            padding: 10px 0;
             text-align: center;
             text-decoration-skip-ink: none;
             border: none;
+            width: 100%;
             border-radius: 4px;
-            padding: 12px 34px;
             border: 1px solid #661d9b;
             cursor: pointer;
             transition: 0.3s ease-in-out;
             &:hover {
               color: #fff;
               background-color: #661d9b;
+            }
+          }
+          .btns {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            width: 100%;
+            button {
+              background-color: #7421b0;
+              color: #fff;
+              border: none;
+              border-radius: 4px;
+              cursor: pointer;
+              width: 40%;
+              font-size: 22px;
+              padding: 10px 0;
+              transition: 0.3s ease-in-out;
+              &:hover {
+                background-color: #60199d;
+              }
             }
           }
         }
@@ -284,26 +315,6 @@ section {
             text-underline-position: from-font;
             text-decoration-skip-ink: none;
             color: #828282;
-          }
-          button {
-            background-color: #fff;
-            color: #661d9b;
-            font-family: Rubik;
-            font-size: 16px;
-            font-weight: 700;
-            line-height: 24px;
-            text-align: center;
-            text-decoration-skip-ink: none;
-            border: none;
-            border-radius: 4px;
-            padding: 12px 34px;
-            border: 1px solid #661d9b;
-            cursor: pointer;
-            transition: 0.3s ease-in-out;
-            &:hover {
-              color: #fff;
-              background-color: #661d9b;
-            }
           }
         }
       }
@@ -542,5 +553,20 @@ section {
         box-shadow: 0px 18px 45px -10px #00000021;
       }
     }
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: translate(16px, -16px) scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: translate(16px, -16px) scale(1.1);
+    opacity: 0.8;
+  }
+  100% {
+    transform: translate(16px, -16px) scale(1);
+    opacity: 1;
   }
 }
