--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -1,6 +1,6 @@
 .banner {
   height: 90vh;
-  background-image: url("./assets/images/banneBg.png");
+  background-image: url("./assets/images/banneBg.png") !important;
   background-repeat: no-repeat;
   background-position: right;
   background-size: 40% 100%;
